--- a/style.css
+++ b/style.css
@@ -41,13 +41,12 @@ hr {
     right: 0px;
 }
 
-.options-box {
+#options-box {
     background: #ffffff;
-    border: 1px solid #999;
-    border-radius: 3px;
     height: 100%;
     line-height: 35px;
-    padding: 10px 10px 30px 10px;
+    padding: 20px 20px 30px 10px;
+    margin-left: 10px;
     text-align: left;
     width: 340px;
 }
@@ -80,6 +79,43 @@ hr {
 #search-within-time-text {
     width: 84%;
 }
+
+#nav-bar {
+    width: 100%;
+    text-align: center;
+    display: none;
+    height: 70px;
+}
+
+@media (min-width: 700px) {
+    #options-box {
+        width: 340px;;
+        display: block;
+    }
+    #map {
+        left: 362px;
+        display: block;
+    }
+    #nav-bar {
+        display: none;
+    }
+}
+
+@media (max-width: 700px) {
+    #options-box {
+        width: 100%;
+        display: none;
+    }
+    #map {
+        width: 100%;
+        left: 0px;
+    }
+    #nav-bar {
+        display: inline;
+    }
+}
+
+
 
 
 
