fixed some more error

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+    font-family: Arial, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     height: 100%;
@@ -40,7 +47,7 @@ li:hover {
 }
 
 hr {
-    background: #D0D7D9;
+    background: #d0d7d9;
     height: 1px;
     margin: 20px 0 20px 0;
     border: none;
